[package]
name = "eska"
version = "0.1.0"
edition = "2024"
description = "Утилита для разработчиков 1С Enterprise"
license = "Apache-2.0"
repository = "https://github.com/1c-tooling/eska"
readme = "README.md"
keywords = ["1c-enterpirse", "cli"]
categories = ["command-line-utilities", "filesystem"]
authors = ["Aleksey Kalsin <aleksey@kalsin.pro>"]

[profile.dev]
opt-level = 0 # No optimization for fast compile times
debug = true  # Include debug symbols

[profile.release]
opt-level = 3 # Maximum optimization for performance
debug = false # Exclude debug symbols for smaller binary size
lto = true    # Link-Time Optimization for further size reduction

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[dependencies]
